--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.3.0",
     "bufferutil": "^3.0.3",
+    "discord.js": "^11.3.0",
     "erlpack": "discordapp/erlpack",
+    "gm": "^1.23.1",
+    "libsodium-wrappers": "^0.5.4",
     "node-opus": "^0.2.7",
     "opusscript": "^0.0.6",
     "sodium": "^2.0.3",
-    "libsodium-wrappers": "^0.5.4",
+    "tiny_request": "^1.0.13",
     "uws": "^9.14.0"
   }
 }
