--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gm": "^1.23.1",
     "libsodium-wrappers": "^0.5.4",
     "node-opus": "^0.2.7",
+    "node-schedule": "^1.3.0",
     "opusscript": "^0.0.6",
     "sodium": "^2.0.3",
     "tiny_request": "^1.0.13",
