--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bufferutil": "^3.0.3",
+    "cheerio": "^1.0.0-rc.2",
     "discord.js": "^11.3.0",
     "erlpack": "discordapp/erlpack",
     "figlet": "^1.2.0",
