--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bufferutil": "^3.0.3",
+    "bufferutil": "^3.0.5",
     "cheerio": "^1.0.0-rc.2",
-    "discord.js": "^11.3.0",
-    "erlpack": "discordapp/erlpack",
-    "figlet": "^1.2.0",
+    "discord.js": "^11.4.2",
+    "erlpack": "github:discordapp/erlpack",
+    "figlet": "^1.2.1",
     "gm": "^1.23.1",
     "libsodium-wrappers": "^0.5.4",
-    "node-opus": "^0.2.7",
-    "node-schedule": "^1.3.0",
+    "node-opus": "^0.2.9",
+    "node-schedule": "^1.3.2",
     "opusscript": "^0.0.6",
     "sodium": "^2.0.3",
     "tiny_request": "^1.0.13",
-    "uws": "^9.14.0"
+    "uws": "^9.148.0"
   }
 }
