--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bufferutil": "^3.0.5",
-    "cheerio": "^1.0.0-rc.2",
-    "discord.js": "^11.4.2",
+    "@discordjs/uws": "^10.149.0",
+    "bufferutil": "^4.0.1",
+    "cheerio": "^1.0.0-rc.3",
+    "discord.js": "^11.5.1",
     "erlpack": "github:discordapp/erlpack",
-    "figlet": "^1.2.1",
+    "figlet": "^1.2.3",
     "gm": "^1.23.1",
-    "libsodium-wrappers": "^0.5.4",
+    "libsodium-wrappers": "^0.7.4",
     "node-opus": "^0.2.9",
     "node-schedule": "^1.3.2",
     "opusscript": "^0.0.6",
